--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rafaella Cardoso</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,11 @@
 
   <body>
     <div class="top">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+      <img class="top-cloud" src="cloud.png" alt="cloud-image">
       <h1>I'm Rafaella.</h1>
       <h2>a <u>pro</u>grammer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-      <img src="images/mountain.png" alt="mountain-image">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+      <img src="mountain.png" alt="mountain-image">
     </div>
 
     <div class="middle">
