--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="middle">
       <div class="profile">
-        <img class="profilepic" src="images/profile2.png" alt="">
+        <img class="profilepic" src="profile2.png" alt="">
         <h2>Hello.</h2>
         <p>I'm Rafaella. I was an English teacher. Now, I decided to start a new journey as a programmer. It's never too late to choose a diferent path, is it?</p>
       </div>
@@ -29,12 +29,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="skill1" src="images/baking.png" alt="">
+          <img class="skill1" src="baking.png" alt="">
           <h3>Baking</h3>
           <p>I started baking in 2020, because I had nothing better to do during the pandemic. Baking had a nice touch to it because my sister is allergic to gluten and I wanted to bake things she would be able to eat. Ever since then, I have never stopped. My best dish and all time favorite is the banana muffin.</p>
         </div>
         <div class="skill-row">
-          <img class="skill2" src="images/coding.png" alt="">
+          <img class="skill2" src="coding.png" alt="">
           <h3>Coding</h3>
           <p>I started coding when I was around 13 years. I only started doing so because I have always been a fan of different artists and I wanted to create a fanpage for them, but I didn't have the money to pay for someone to do it. So, I learned it by myself, stopped when I got a bit older and now I'm back at it again.</p>
         </div>
